# genadi

./: .env.production.example  CHARTS_INTEGRATION_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DOCKER_SETUP.md  PRICE_CHART_INTEGRATION.md  PRICE_CHART_SUMMARY.md  QUICK_START.md  README.md  START_SYSTEM.sh  STEP1_COMPLETE.md  SYSTEM_STRUCTURE.md  docker-compose.yml
backend/: .dockerignore  .env  .env.example  Dockerfile  main.py  requirements.txt
backend/api/: dexscreener.py  pumpfun.py
backend/cache/: redis_cache.py
backend/monitoring/: blockchain_monitor.py
backend/pagination/: market_paginator.py
backend/services/: __init__.py  sol_price_oracle.py
backend/websocket/: optimized_manager.py
contracts/: Anchor.toml  CURRENT_STATUS.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_SOLUTION.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_STATUS.md  FRONTEND_INTEGRATION.md  IMPLEMENTATION_SUMMARY.md  INSTALL_DOCKER.md  INSTALL_SOLANA_TOOLCHAIN.md  ORACLE_PARIMUTUEL_GUIDE.md  PARIMUTUEL_USAGE.md  PERMISSIONLESS_MARKETS.md  PERMISSIONLESS_SUMMARY.md  SECURITY_AUDIT.md  START_DOCKER.md  build.sh
contracts/crank/: .dockerignore  .env  .env.example  Dockerfile  QUICKSTART.md  README.md  market-cap-monitor.ts  markets-config.json  oracle-keypair.json  package-lock.json  package.json  resolution-bot.ts  setup.js  simple-test.ts  tsconfig.json
contracts/programs/mememarket/: Cargo.toml
contracts/programs/mememarket/src/: lib.rs
contracts/src/: amm.rs  contract.ts  lib.rs  lib.rs.backup  main.rs  orderbook.rs  parimutuel.rs
