[package]
name = "mememarket"
version = "0.1.0"
description = "MemeMarket Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mememarket"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"